crates/ty_python_semantic/resources/mdtest/snapshots/type.md_-_Calls_to_`type()`_-_MRO_errors_with_fix_(e8566dec5b35dcae).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: type.md - Calls to `type()` - MRO errors with fix
mdtest path: crates/ty_python_semantic/resources/mdtest/call/type.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import Generic, TypeVar
2 | 
3 | K = TypeVar("K")
4 | V = TypeVar("V")
5 | 
6 | class Foo(Generic[K, V], dict): ...  # error: [inconsistent-mro]
```

# Diagnostics

```
error[inconsistent-mro]: Cannot create a consistent method resolution order (MRO) for class `Foo` with bases list `[<special-form 'typing.Generic[K, V]'>, <class 'dict'>]`
 --> src/mdtest_snippet.py:6:1
  |
4 | V = TypeVar("V")
5 |
6 | class Foo(Generic[K, V], dict): ...  # error: [inconsistent-mro]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `inconsistent-mro` is enabled by default
3 | K = TypeVar("K")
4 | V = TypeVar("V")
5 | 
  - class Foo(Generic[K, V], dict): ...  # error: [inconsistent-mro]
6 + class Foo(dict, Generic[K, V]): ...  # error: [inconsistent-mro]
note: This is an unsafe fix and may change runtime behavior

```
